firebase não está achando o socket.io

--- a/public/chat.html
+++ b/public/chat.html
@@ -25,7 +25,7 @@
     </div>
     <div id="envio-mensagens">
       <input id="texto" autocomplete="off" autofocus placeholder="Digite sua MSG" />
-      <button id="enviar">
+      <button type="button" id="enviar" title="Clique para enviar">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send-fill"
           viewBox="0 0 16 16">
           <path
@@ -34,7 +34,7 @@
       </button>
     </div>
   </main>
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="../socket.io/socket.io.js"></script>
   <script src="./script.js"></script>
 </body>
 
