--- a/public/chat.html
+++ b/public/chat.html
@@ -34,7 +34,7 @@
       </button>
     </div>
   </main>
-  <script src="../socket.io/socket.io.js"></script>
+  <script src="https://cdn.socket.io/4.1.2/socket.io.min.js"></script>
   <script src="./script.js"></script>
 </body>
 
