--- a/public/chat.html
+++ b/public/chat.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -14,7 +13,9 @@
     <div class="header-titulo-icon">
       <img src="./assets/chat-logo.png" class="img-logo" alt="icon-site">
     </div>
-    <div class="user-icon"><lord-icon src="https://cdn.lordicon.com/hrjifpbq.json" trigger="hover"
+    <div class="user-icon">
+      <lord-icon 
+      src="https://cdn.lordicon.com/hrjifpbq.json" trigger="hover"
         colors="primary:#6c757d" style="width:70px;height:50px;">
       </lord-icon>
       <h1 id="user-titulo"></h1>
@@ -34,7 +35,7 @@
       </button>
     </div>
   </main>
-  <script src="https://cdn.socket.io/4.1.2/socket.io.min.js"></script>
+  <script src="../socket.io/socket.io.js"></script>
   <script src="./script.js"></script>
 </body>
 
