--- a/public/chat.html
+++ b/public/chat.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="./assets/chatduo.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="public/assets/chatduo.svg" type="image/x-icon">
   <script src="https://cdn.lordicon.com/lordicon.js"></script>
   <title>Chat Min</title>
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="/public/style.css" />
 </head>
 
 <body>
@@ -35,7 +35,7 @@
     </div>
   </main>
   <script src="../socket.io/socket.io.js"></script>
-  <script src="./script.js"></script>
+  <script src="public/script.js"></script>
 </body>
 
 </html>
