--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./assets/chatduo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="public/assets/chatduo.svg" type="image/x-icon">
     <script src="http://cdn.lordicon.com/lordicon.js"></script>
     <title>Chat Min</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/public/style.css" />
 </head>
 
 <body>
     <section id="card-cadastro">
 
         <div class="titulo-icon-logo">
-            <img src="./assets/chat-logo.png" class="img-logo-cadastro" alt="icon-site">
+            <img src="public/assets/chat-logo.png" class="img-logo-cadastro" alt="icon-site">
         </div>
 
 
@@ -27,7 +27,7 @@
 
 
     </section>
-    <script src="./controller.js"></script>
+    <script src="public/controller.js"></script>
 </body>
 
 </html>
