--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="public/assets/chatduo.svg" type="image/x-icon">
-    <script src="http://cdn.lordicon.com/lordicon.js"></script>
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <title>Chat Min</title>
     <link rel="stylesheet" href="/public/style.css" />
 </head>
