redirecionando o server.js

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
 
     </section>
-    <script src="public/controller.js"></script>
+    <script src="/public/controller.js"></script>
 </body>
 
 </html>
