--- a/public/chat.html
+++ b/public/chat.html
@@ -35,7 +35,7 @@
     </div>
   </main>
   <script src="../socket.io/socket.io.js"></script>
-  <script src="public/script.js"></script>
+  <script src="/public/script.js"></script>
 </body>
 
 </html>
