--- a/public/chat.html
+++ b/public/chat.html
@@ -34,7 +34,7 @@
       </button>
     </div>
   </main>
-  <script src="../socket.io/socket.io.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script>
   <script src="/public/script.js"></script>
 </body>
 
